Fixed CSV Bug